--- a/src/stylesheets/themes/_colors.scss
+++ b/src/stylesheets/themes/_colors.scss
@@ -1,15 +1,6 @@
-$clr-neutral-50: hsl(0, 0%, 100%); // #FFFFFF
-$clr-neutral-100: hsl(0, 0%, 96%); // #F4F4F4
-$clr-neutral-200: hsl(0, 0%, 91%); // #E9E9E9
-$clr-neutral-300: hsl(0, 0%, 81%); // #CECECE
-$clr-neutral-400: hsl(0, 0%, 46%); // #757575
-$clr-neutral-500: hsl(0, 0%, 23%); // #3A3A3A
-$clr-neutral-600: hsl(0, 0%, 18%); // #2D2D2D
-$clr-neutral-700: hsl(0, 0%, 12%); // #1F1F1F
-$clr-neutral-800: hsl(0, 0%, 2%); // #050505
-$clr-neutral-900: hsl(0, 0%, 0%); // #000000
-
-$clr-accent-300: hsl(274, 82%, 60%); // #A445ED
-$clr-accent-400: hsl(274, 82%, 50%); // #8F19E8
-
-$clr-error-400: hsl(0, 100%, 66%); // #FF5252
+$clr-neutral-100: hsl(0, 0%, 100%); // White
+$clr-neutral-200: hsl(0, 0%, 98%); // Very Light Gray (Light Mode Background)
+$clr-neutral-400: hsl(0, 0%, 52%); // Dark Gray (Light Mode Input)
+$clr-neutral-700: hsl(209, 23%, 22%); // Dark Blue (Dark Mode Elements)
+$clr-neutral-800: hsl(207, 26%, 17%); // Very Dark Blue (Dark Mode Background)
+$clr-neutral-900: hsl(200, 15%, 8%); // Very Dark Blue (Light Mode Text)
