--- a/src/stylesheets/base/_fonts.scss
+++ b/src/stylesheets/base/_fonts.scss
@@ -10,6 +10,15 @@
 @font-face {
   font-family: "Nunito Sans";
   font-style: normal;
+  font-weight: 400;
+  src: local("Nunito Sans"),
+    url("/assets/fonts/NunitoSans-Regular.ttf") format("truetype");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Nunito Sans";
+  font-style: normal;
   font-weight: 600;
   src: local("Nunito Sans"),
     url("/assets/fonts/NunitoSans-SemiBold.ttf") format("truetype");
