--- a/src/stylesheets/themes/_dark.scss
+++ b/src/stylesheets/themes/_dark.scss
@@ -6,7 +6,10 @@
   @include light.theme--light;
   --theme-bg: #{colors.$clr-neutral-800};
   --theme-clr: #{colors.$clr-neutral-100};
+  --theme-clr-focus: #{colors.$clr-neutral-100};
+
   --theme-header-bg: #{colors.$clr-neutral-700};
+
   --theme-icon-fill: #{colors.$clr-neutral-100};
   --theme-icon-stroke: transparent;
 }
