--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -4,6 +4,7 @@
   color: var(--theme-clr);
   background-color: var(--theme-bg);
   @include typography.font-base;
+  transition: all var(--transition-default-time) ease-in;
 }
 
 a:focus-visible {
