--- a/src/stylesheets/themes/_dark.scss
+++ b/src/stylesheets/themes/_dark.scss
@@ -12,6 +12,8 @@
 
   --theme-icon-fill: #{colors.$clr-neutral-100};
   --theme-icon-stroke: transparent;
+
+  --theme-element-bg: #{colors.$clr-neutral-700};
 }
 
 .theme--dark {
