--- a/src/stylesheets/abstracts/_mixins.scss
+++ b/src/stylesheets/abstracts/_mixins.scss
@@ -58,6 +58,7 @@
 }
 
 @mixin container {
-  max-width: 1279px;
+  max-width: var(--container-max-width);
+  padding-inline: var(--container-padding-inline);
   margin-inline: auto;
 }
