--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -5,3 +5,9 @@ $breakpoints: (
   "tablet": 768px,
   "desktop": 1024px,
 ) !default;
+
+:root {
+  --container-max-width: 1279px;
+  --container-padding-inline: 1rem;
+  --transition-default-time: 150ms;
+}
