--- a/src/stylesheets/themes/_light.scss
+++ b/src/stylesheets/themes/_light.scss
@@ -11,6 +11,12 @@
 
   --theme-icon-fill: transparent;
   --theme-icon-stroke: #{colors.$clr-neutral-800};
+
+  --theme-element-shadow: 0px 2px 9px rgba(0, 0, 0, 0.0532439);
+  --theme-element-border-radius: 5px;
+  --theme-element-bg: #{colors.$clr-neutral-100};
+
+  --theme-search-clr: #{colors.$clr-neutral-400};
 }
 
 .theme--light {
