--- a/src/stylesheets/themes/_dark.scss
+++ b/src/stylesheets/themes/_dark.scss
@@ -14,6 +14,8 @@
   --theme-icon-stroke: transparent;
 
   --theme-element-bg: #{colors.$clr-neutral-700};
+
+  --theme-card-bg: #{colors.$clr-neutral-700};
 }
 
 .theme--dark {
