--- a/src/stylesheets/themes/_light.scss
+++ b/src/stylesheets/themes/_light.scss
@@ -17,6 +17,9 @@
   --theme-element-bg: #{colors.$clr-neutral-100};
 
   --theme-search-clr: #{colors.$clr-neutral-400};
+
+  --theme-card-bg: #{colors.$clr-neutral-100};
+  --theme-card-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.0294384);
 }
 
 .theme--light {
