country detail page updates

--- a/src/stylesheets/base/_icons.scss
+++ b/src/stylesheets/base/_icons.scss
@@ -15,3 +15,10 @@
   fill: var(--theme-icon-stroke);
   stroke: none;
 }
+
+.icon--left-arrow {
+  width: 18px;
+  height: 18px;
+  fill: var(--theme-icon-clr);
+  stroke: none;
+}
