--- a/src/stylesheets/themes/_dark.scss
+++ b/src/stylesheets/themes/_dark.scss
@@ -12,10 +12,13 @@
 
   --theme-icon-fill: #{colors.$clr-neutral-100};
   --theme-icon-stroke: transparent;
+  --theme-icon-clr: #{colors.$clr-neutral-100};
 
   --theme-element-bg: #{colors.$clr-neutral-700};
 
   --theme-card-bg: #{colors.$clr-neutral-700};
+
+  --theme-btn-bg: #{colors.$clr-neutral-700};
 }
 
 .theme--dark {
