--- a/src/stylesheets/themes/_light.scss
+++ b/src/stylesheets/themes/_light.scss
@@ -11,6 +11,7 @@
 
   --theme-icon-fill: transparent;
   --theme-icon-stroke: #{colors.$clr-neutral-800};
+  --theme-icon-clr: #{colors.$clr-neutral-800};
 
   --theme-element-shadow: 0px 2px 9px rgba(0, 0, 0, 0.0532439);
   --theme-element-border-radius: 5px;
@@ -20,6 +21,9 @@
 
   --theme-card-bg: #{colors.$clr-neutral-100};
   --theme-card-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.0294384);
+
+  --theme-btn-shadow: 0px 0px 7px rgba(0, 0, 0, 0.293139);
+  --theme-btn-bg: #{colors.$clr-neutral-100};
 }
 
 .theme--light {
